--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -83,3 +83,13 @@ alipay:
   format: json
   notify-url: ${ALIPAY_NOTIFY_URL}
   return-url: ${ALIPAY_RETURN_URL}
+
+nz:
+  swagger:
+    enable: true
+    enable-response-wrap: true
+    package-path: com.mini
+    title: 农业小程序API文档
+    description: 农资商城后端服务API接口文档
+    contact-name: 开发团队
+    version: 1.0
